--- a/homeCSS.css
+++ b/homeCSS.css
@@ -1,7 +1,6 @@
-h1 {
+body {
     font-family : verdana;
     color : rgb(41, 53, 135);
-    font-size : 30;
 }
 button {
     font-family : verdana;
